# invest-app-back

./: .gitignore  .gitmodules  Dockerfile  alembic.ini  am_pm_strategy.py  docker-compose.yml  main.py  pyproject.toml  test.ipynb
server/: alembic.ini  app.py  docker-compose-db.yml  main.py  pyproject.toml  test.ipynb
server/.github/workflows/: deploy.yml
server/alembic/: env.py
server/alembic/versions/: 000ebf5f332c_v6_토큰_컬럼_추가.py  113793973956_v5_모의계좌여부_컬럼_추가.py  2f869b81d80c_init.py  3dba3d8de1cf_v8_strategy_env_컬럼_제거.py  601ddf04234d_v7_토큰_컬럼_수정.py  60c12596bf9a_alter_table_account.py  60c12596bf9a_v4_alter_table_account.py  675398e14411_init.py  70799a1a2321_account_update_column_token.py  7db9097c7d6b_account_add_column_login_id.py  91e4ee6c088c_v10_strategy_market_컬럼추가.py  db54643c0efa_v9_strategy_account_id_컬럼_추가.py
server/app/: main.py
server/app/routers/: account.py  environment.py  strategy.py
server/domain/: account_client.py  chat_client.py  env.py  exception.py  kis_api_helper_kr.py  kis_api_helper_us.py  kis_common.py  kis_util.py  my_schedule.py  rebalance.py  stock_info.py  stock_setting.py  type.py
server/domain/account/: __init__.py  account.py  account_holder.py  account_service.py  balance.py
server/domain/dynamic_asset_allocation/: Dynamic_Asset_GTAA5_KR.py  Dynamic_Asset_GTAA5_US.py  Dynamic_Asset_GTAA5_US_A.py
server/domain/env/: env.py  env_type.py
server/domain/helper/: KIS_API_Helper_KR.py  KIS_API_Helper_US.py  KIS_API_Helper_US_ALL.py  KIS_AutoLimit_System.py  KIS_Common.py
server/domain/quote/: quote_client.py
server/domain/static_asset_allocation/: Static_Asset_KR.py  Static_Asset_US.py  Static_Asset_US_A.py  static_asset.py
server/domain/static_assets/: Static_Asset_KR.py  Static_Asset_US.py
server/domain/stock/: stock_client.py
server/infra/: account_repo.py  engine.py  model.py  repository.py  schema.py  strategy_repo.py
server/infra/kis/: dto.py  kis_client.py  token_refresh.py  token_refresher.py
server/infra/persistance/: account_repo.py  schema.py  strategy_repo.py
server/infra/persistance/repo/: account_repo.py  strategy_repo.py
server/infra/persistance/schemas/: account.py  base.py  strategy.py
server/ref/dynamic_asset_allocation/: Dynamic_Asset_GTAA5_US.py
server/ref/helper/: KIS_API_Helper_US.py
server/rest/: account.py  quote.py  stock.py  strategy.py
server/rest/request/: request.py
server/scheduler/: scheduler.py  token_refresh_scheduler.py
server/src/: app.py  config.py  containers.py  lifespan.py  scheduler.py
server/src/account/application/: account_service.py
server/src/account/domain/: access_token.py  account.py  account_create_command.py  account_info.py  account_provider.py  balance.py  dto.py
server/src/common/domain/: base_domain_model.py  config.py  exception.py  ticker.py  type.py
server/src/common/sqlalchmey/: engine.py  sqlalchemy_repository.py  sqlalchmy_entity_mapper.py
server/src/domain/: port.py  rebalance.py  strategy.py  time_holder.py  type.py
server/src/domain/account/: account.py  account_provider.py  account_service.py  dto.py  holdings.py  interface.py  token.py
server/src/domain/common/: exception.py  port.py  time_holder.py
server/src/domain/helper/: KIS_API_Helper_US_ALL.py
server/src/domain/stock/: stock.py  (+1 more)
server/src/infra/: stock_market.py
server/src/report/: report.py
server/src/rest/: account.py  request_model.py  stock.py  strategy.py
server/src/scheduler/: scheduler.py
server/tests/: test.ipynb  test_account.py  test_interval.py  test_market.py  test_stock.py  test_stock_market_client.py  test_strategy.py  test_strategy_service.py  test_suite.py
server/tests/domain/: test_strategy.py
server/web/: request.py  strategy_req.py
(+170 files in other folders)
