[tool.poetry]
name = "invast"
version = "0.1.0"
description = ""
authors = ["sandropark <birdob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pyyaml = "^6.0.2"
requests = "^2.32.3"
pytz = "^2024.2"
finance-datareader = "^0.9.94"
pandas-datareader = "^0.10.0"
pykrx = "^1.0.48"
bs4 = "^0.0.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
